--- a/Exercises_Kmiec_Linear.ipynb
+++ b/Exercises_Kmiec_Linear.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
    "metadata": {},
    "source": [
     "I wasn't sure how to solve this problem. Firstly I extended the feature space to 4 features. Next I calculated \n",
-    "Covariances of vectors filled with distances of points to their class center (according to iris_data.target). After that, I added them, and thus I was able to find within-class scatter matrix (sw). From differences between the mean of each class and the overall mean I was able to calculate between-class scatter matrix. Finally I defined cuts as the average of two means (I considered pairs (0,1) and (1,2)) and proceeded with classification. Suprisingly, this approach yields fantastic result of 89% accuracy. I based my code on the information I found on this blog:\n",
+    "covariances of vectors filled with distances of points to their class center (according to iris_data.target). After that, I added them and thus I was able to find within-class scatter matrix (sw). From differences between the mean of each class and the overall mean I was able to calculate between-class scatter matrix (sb). Finally, I defined two cuts as averages of two means (I considered pairs (0,1) and (1,2)) and proceeded with classification. Suprisingly, this approach yields a fantastic result of 89.33% accuracy. I based my code on the information I found on this blog:\n",
     "\n",
     "https://www.apsl.net/blog/2017/07/18/using-linear-discriminant-analysis-lda-data-explore-step-step"
    ]
